web/fluidity.money/src/components/NavBar/NavBar.module.scss
@import "../../styles/config.scss";

.outerContainer {
  box-sizing: border-box;
  position: absolute;
  background-color: transparent;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100px;
}

.container {
  box-sizing: border-box;
  position: absolute;
  background-color: transparent;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100px;
  display: grid;
  grid-template-columns: 1fr 4fr 1fr;
  max-width: 1500px;

  .navbar {
    box-sizing: border-box;
    justify-content: space-between;
    align-items: center;
    width: fit-content;
    padding: 10px;
    z-index: 99;
    justify-self: center;
    position: fixed;

    .fade {
      width: 100%;
      ul {
        display: flex;
        li {
          margin: 20px;
          .active {
            & > * {
              font-weight: 700;
              color: $fluidWhite;
              text-decoration: underline;
              text-underline-offset: 0.5em;
            }
          }
          a {
            color: $textGrey;
          }
          button {
            margin: 0px 8px 0px 8px;
          }

          .modalButton {
            fill: $textGrey;
          }
        }
      }
    }
    @media (max-width: 750px) {
      grid-template-columns: 1fr 2fr 1fr;
    }
  }
  .navbarFixed {
    box-sizing: border-box;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    max-width: 1500px;
    padding: 10px 50px 10px 50px;
    position: fixed;
    .fixed {
      box-sizing: border-box;
      width: 100%;
      display: flex;
      justify-content: space-between;
      align-items: center;
    }
    @media (max-width: 700px) {
      padding: 10px 30px 10px 30px;
    }
  }
}

.fluidity {
  z-index: 1;
  cursor: pointer;
  margin-left: 50.5px;
  position: fixed;
}

.imgContainer {
  width: 100px;
  display: flex;
  justify-content: center;
  margin-bottom: 20px;
  img {
    max-width: 100%;
    display: block;
  }
}

.transparent {
  mix-blend-mode: difference;
}

